[package]
name = "skia_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
gl = "0.14.0"
glutin = "0.30.7"
glutin-winit = "0.3.0"
image = "0.24.6"
raw-window-handle = "0.5.2"
skia-safe = { version = "0.60.0", features = ["x11", "all-linux"] }
winit = "0.28.3"
